@@ -21,3 +21,4 @@ Thanks to:
     Yao Ziyuan whoes improve the simplified chinese translation
     Serdar Soytetir whoes add the turkish translation
     Sergey Ilinyh whoes help and improve D-Bus support
+    Frank Ren whoes improve the save dialog
