@@ -116,3 +116,4 @@
 	- update italian and german translations
 * Version 0.13.2
 	- improve system tray support
+	- improve the save dialog
